# meetingsummary

./: .gitignore  README.md  install_ffmpeg.ps1  meeting-summarizer-chunked.py  meetingsummary.spec  pyproject.toml
cicd/: build_installer.cmd
cicd/translation/: gettext.sh
meeting_summarizer/: history_window.py  main.py  main_window.py  main_window.spec  processing_window.py  recording_window.py  settings_window.py  summary_view.py  summary_window.py  transcript_window.py  upload_window.py
meeting_summarizer/audio_recorder/: __init__.py  recorder.py  recorder_gui.py
meeting_summarizer/config/: settings.py
meeting_summarizer/prompt/: class.txt
meeting_summarizer/record_audio/: audio_recorder_gui.py  record_audio.py
meeting_summarizer/speech_to_text/: __init__.py  transcribe_gui.py  transcriber.py
meeting_summarizer/text_processor/: __init__.py  chunker.py  main.py  meeting_analyzer.py  summarizer.py
meeting_summarizer/text_processor/nltk_data/tokenizers/punkt/: README.md
meeting_summarizer/transcript/: default_transcript.txt
meeting_summarizer/utils/: MeetingRecordProject.py  chunker.py  file_utils.py  flexible_logger.py  language_detector.py  lecture_notes_generator.py  llamaindex_llm_factory.py  llm_factory.py  llm_proofreader.py  llm_statuscheck.py  meeting_notes_generator.py  notes_processor_factory.py  processor_types.py  project_manager.py
meeting_summarizer/utils/prompt/: discussion.txt  meetingtype.txt
meeting_summarizer/utils/prompts/: lecture_notes.md  meeting_notes.md
meeting_summarizer/widgets/: waveform_widget.py
transcripts/: bailu.txt
