[tool.poetry]
name = "meeting_summarizer"
version = "0.1.0"
description = "An AI-powered meeting transcript summarizer with advanced chunking strategies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "meeting_summarizer"}]

[tool.poetry.dependencies]
python = "^3.11"
python-docx = "^1.1.2"
pymupdf4llm = "^0.0.17"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
requests = "^2.31.0"
nltk = "^3.8.1"
tiktoken = "^0.5.2"
scikit-learn = "^1.3.2"
numpy = "^1.26.3"
transformers = "^4.36.2"
torch = "^2.1.2"
sentence-transformers = "^2.2.2"
soundcard = "^0.4.3"
logging = "^0.4.9.6"
llama-index = "^0.12.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
